--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 # Util
 arrayref = "0.3.6"
-ascii = { version = "1.0.0", features = ["serde"] }
+ascii = { version = "1.0.0" }
 int-conv = "0.1.4"
 either = "1.6.1"
 sealed = "0.3.0"
@@ -38,4 +38,4 @@ native-dialog = { version = "0.5.5", optional = true }
 [features]
 gui = ["eframe"]
 alert = ["native-dialog"]
-use_serde = ["serde"]
+use_serde = ["serde", "ascii/serde"]
