--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,40 @@
 [package]
-name = "zutil"
-version = "0.1.0"
 authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
 edition = "2018"
+name = "zutil"
+version = "0.1.0"
 
 [dependencies]
 
 # Util
 arrayref = "0.3.6"
-ascii = { version = "1.0.0" }
-int-conv = "0.1.4"
-either = "1.6.1"
-sealed = "0.3.0"
+ascii = {version = "1.0.0"}
 derive_more = "0.99.14"
+either = "1.6.1"
+int-conv = "0.1.4"
+sealed = "0.3.0"
 
 # Serde
-serde = { version = "1.0.120", features = ["derive"], optional = true }
+serde = {version = "1.0.120", features = ["derive"], optional = true}
 
 # Derives
-thiserror = "1.0.23"
 ref-cast = "1.0.6"
+thiserror = "1.0.23"
 
-# Thread
-rayon = "1.5.1"
-futures = "0.3.15"
-thread_local = "1.1.3"
+# Futures
+futures = {version = "0.3.15", optional = true}
 
 # Logging
 log = "0.4.14"
 
 # Gui
-eframe = { git = "https://github.com/emilk/egui", optional = true }
+eframe = {git = "https://github.com/emilk/egui", optional = true}
 
 # Alert
-native-dialog = { version = "0.5.5", optional = true }
+native-dialog = {version = "0.5.5", optional = true}
 
 [features]
-gui = ["eframe"]
 alert = ["native-dialog"]
+gui = ["eframe"]
+use_futures = ["futures"]
 use_serde = ["serde", "ascii/serde"]
