--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ futures = {version = "0.3.15", optional = true}
 log = "0.4.14"
 
 # Gui
-eframe = {git = "https://github.com/emilk/egui", optional = true}
+eframe = {git = "https://github.com/emilk/egui", rev = "7c5a2d60", optional = true}
 
 # Alert
 native-dialog = {version = "0.5.5", optional = true}
