--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,19 @@ resolver = "2"
 # Workspace members
 zutil-legacy = { path = "zutil-legacy" }
 
-arrayref = "0.3.6"
-ascii = "1.0.0"
-derive_more = "0.99.14"
-eframe = { git = "https://github.com/emilk/egui", rev = "7c5a2d60" }
-either = "1.6.1"
-futures = "0.3.15"
+arrayref = "0.3.9"
+ascii = "1.1.0"
+derive_more = "1.0.0"
+eframe = "0.29.1"
+either = "1.13.0"
+futures = "0.3.31"
 int-conv = "0.1.4"
-log = "0.4.14"
-native-dialog = "0.5.5"
-ref-cast = "1.0.6"
-sealed = "0.3.0"
-serde = "1.0.120"
-thiserror = "1.0.23"
+log = "0.4.22"
+native-dialog = "0.7.0"
+ref-cast = "1.0.23"
+sealed = "0.6.0"
+serde = "1.0.216"
+thiserror = "2.0.7"
 
 [workspace.lints]
 
