--- a/zutil-legacy/Cargo.toml
+++ b/zutil-legacy/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 
 arrayref = { workspace = true }
 ascii = { workspace = true }
-derive_more = { workspace = true }
+derive_more = { workspace = true, features = ["full"] }
 eframe = { workspace = true, optional = true }
 either = { workspace = true }
 futures = { workspace = true, optional = true }
