`AsyncLoadable` can now abort the inner task if the loading future is cancelled.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ int-conv = "0.1.4"
 log = "0.4.22"
 native-dialog = "0.7.0"
 parking_lot = "0.12.3"
+pin-project = "1.1.7"
 ref-cast = "1.0.23"
 sealed = "0.6.0"
 serde = "1.0.216"
