--- a/zutil-async-loadable/Cargo.toml
+++ b/zutil-async-loadable/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 zutil-app-error = { workspace = true }
 
 parking_lot = { workspace = true, features = ["arc_lock", "send_guard"] }
+pin-project = { workspace = true }
 tokio = { workspace = true, features = ["sync", "rt"] }
 
 [lints]
