Added some tests for `AsyncLoadable`.

--- a/zutil-async-loadable/Cargo.toml
+++ b/zutil-async-loadable/Cargo.toml
@@ -12,5 +12,11 @@ parking_lot = { workspace = true, features = ["arc_lock", "send_guard"] }
 pin-project = { workspace = true }
 tokio = { workspace = true, features = ["sync", "rt"] }
 
+[dev-dependencies]
+
+futures = { workspace = true }
+tokio = { workspace = true, features = ["macros"] }
+
+
 [lints]
 workspace = true
