`zutil_async_loadable::ProgressUpdater` no longer needs the `T` type parameter.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ either = "1.13.0"
 futures = "0.3.31"
 int-conv = "0.1.4"
 log = "0.4.22"
+mappable-rc = "0.1.1"
 native-dialog = "0.7.0"
 parking_lot = "0.12.3"
 pin-project = "1.1.7"
