--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,12 @@ pin-project = "1.1.7"
 ref-cast = "1.0.23"
 sealed = "0.6.0"
 serde = "1.0.216"
+stable_deref_trait = "1.2.0"
 thiserror = "2.0.7"
 tokio = "1.42.0"
+yoke = "0.7.5"
 
 [workspace.lints]
-
-# No unsafe allowed in this crate
-rust.unsafe_code = "forbid"
 
 # Must use `expect` instead of `unwrap`
 clippy.unwrap_used = "forbid"
