--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ eframe = "0.29.1"
 either = "1.13.0"
 futures = "0.3.31"
 int-conv = "0.1.4"
+itertools = "0.14.0"
 log = "0.4.22"
 mappable-rc = "0.1.1"
 native-dialog = "0.7.0"
