--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
-members  = ["zutil-async-loadable", "zutil-cloned", "zutil-legacy"]
+members  = ["zutil-async-loadable", "zutil-cloned"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -9,7 +9,6 @@ resolver = "2"
 # Workspace members
 zutil-async-loadable = { path = "zutil-async-loadable" }
 zutil-cloned         = { path = "zutil-cloned" }
-zutil-legacy         = { path = "zutil-legacy" }
 
 app-error          = { git = "https://github.com/Zenithsiz/app-error", rev = "30238f3778fe84809ba2113c1199852b7bc7c1e9" }
 arrayref           = "0.3.9"
