--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
-members  = ["zutil-async-loadable", "zutil-cloned"]
+members  = ["zutil-async-loadable", "zutil-cloned", "zutil-logger"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -9,11 +9,13 @@ resolver = "2"
 # Workspace members
 zutil-async-loadable = { path = "zutil-async-loadable" }
 zutil-cloned         = { path = "zutil-cloned" }
+zutil-logger         = { path = "zutil-logger" }
 
 app-error          = { git = "https://github.com/Zenithsiz/app-error", rev = "30238f3778fe84809ba2113c1199852b7bc7c1e9" }
 arrayref           = "0.3.9"
 ascii              = "1.1.0"
 derive_more        = "2.0.1"
+duplicate          = "2.0.0"
 eframe             = "0.32.3"
 either             = "1.15.0"
 futures            = "0.3.31"
@@ -32,6 +34,8 @@ stable_deref_trait = "1.2.0"
 syn                = "2.0.106"
 thiserror          = "2.0.16"
 tokio              = "1.47.1"
+tracing            = "0.1.41"
+tracing-subscriber = "0.3.20"
 yoke               = "0.8.0"
 
 [workspace.lints]
